# CHIMERApy

./: .cruft.json  .gitignore  .isort.cfg  .pre-commit-config.yaml  .rtd-environment.yml  .ruff.toml  CHIMERA_V1.ipynb  CHIMERA_V2.py  CHIMERA_V3.py  MANIFEST.in  README.rst  pyproject.toml  tox.ini
changelog/: 44.trivial.rst  45.feature.rst
chimerapy/: __init__.py  chimera.py  chimera_copy.py  chimera_func.py  chimera_func_test.py  chimera_legacy.py  chimera_original.py  utils.py  version.py
chimerapy/tests/: test_ch_summary.txt  test_chimera.py  test_chimera_legacy.py  test_chimera_original.py  test_compare.py
docs/: conf.py  index.rst
examples/: README.rst  paper-figures.py  paper_figures.py
scripts/: comparison.py
