[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=6.2",
  "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "chimerapy"
description = "CHIMERApy is a python implmentation of the CHIMERA coronal hole detection algorithm."
readme = "README.rst"
requires-python = ">=3.9"
license = { file = "licenses/LICENSE.rst", content-type = "text/plain" }
dependencies = [
    'sunpy[net,map]',
    'mahotas',
    'scikit-image',
    'opencv-python'

]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-doctestplus",
    "pytest-cov",
]
docs = [
    "sphinx",
    "sphinx-automodapi",
    "tomli; python_version <\"3.11\"",
]

[project.urls]
repository = "chimerapy.readthedocs.io"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]

[tool.setuptools_scm]
write_to = "chimerapy/_version.py"

[tool.pytest.ini_options]
testpaths = [
  "chimerapy",
  "docs",
]
norecursedirs = ['chimerapy/_dev']
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"

[tool.coverage.run]
omit = [
 "chimerapy/__init*",
 "chimerapy/conftest.py",
 "chimerapy/*setup_package*",
 "chimerapy/tests/*",
 "chimerapy/*/tests/*",
 "chimerapy/extern/*",
 "chimerapy/version*",
 "*/chimerapy/__init*",
 "*/chimerapy/conftest.py",
 "*/chimerapy/*setup_package*",
 "*/chimerapy/tests/*",
 "*/chimerapy/*/tests/*",
 "*/chimerapy/extern/*",
 "*/chimerapy/version*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  "def main(.*):",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
]
